@@ -49,7 +49,7 @@ $modversion['license_url'] = "www.gnu.org/licenses/gpl-2.0.html/";
 
 //About
 $modversion['module_status']       = "Alpha 2";
-$modversion['release_date']        = "2016/06/28";
+$modversion['release_date']        = "2016/06/30";
 //$modversion['release']           = "1.3";
 $modversion['demo_site_url']       = "";
 $modversion['demo_site_name']      = "";
